# cappuccino

./: .env.example  AGENTS.md  README.md  agent_cli.py  agent_state.db  api.py  cappuccino_agent.py  chat_cli.py  config.py  cv2.py  discord_manager.py  discord_tools.py  docker_manager.py  docker_tools.py  emotion_recognizer.py  fractal_planner.py  goal_manager.py  gtts.py  knowledge_graph.py  logging_config.py  main.py  ollama_client.py  planner.py  pyproject.toml  queue_manager.py  requirements-dev.txt  requirements.txt  run_server_bot.py  schemas.py  self_improver.py  state_manager.py  test_integration.py  tool_manager.py
.github/workflows/: ci.yml  python-tests.yml
agents/: __init__.py  analyzer_agent.py  executor_agent.py  planner_agent.py
discordbot/: README.md  bot.py  daily_news.json  eew_channel.json  flags.txt  last_eew.txt  news_channel.json  poker.py  requirements-lock.txt  requirements.txt  sent_news.json  thread_store.py  weather_channel.json
discordbot/scripts/: create_assistant.py
discordbot/tests/: test_cmd_purge.py  test_eew.py  test_thread_store.py  (+1 more)
docs/: NEXT_STEPS_JA.md
tests/: conftest.py  test_api.py  test_cache.py  test_cappuccino_agent.py  test_chat_cli.py  test_concurrency_stress.py  test_emotion.py  test_fractal_planner.py  test_goal_plan.py  test_knowledge_graph.py  test_llm_tools.py  test_planner_state.py  test_realtime_endpoint.py  test_self_improver.py  test_service_port.py  test_state_manager.py  test_task_endpoints.py  test_tool_autogen.py  test_tool_manager.py  test_tool_manager_all.py  test_tool_manager_browser.py
(+3 files in other folders)
